<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.race.planner.activities.MainActivity"
    android:background="@color/backgroundBlue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top">
            <ImageView
                android:id="@+id/splash_pic"
                android:src="@drawable/splashpic"
                android:contentDescription="splash_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">
        <TextView
            android:id="@+id/app_name"
            android:text="@string/app_name"
            android:textColor="@color/textPrimary"
            android:textSize="48dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <TextView
                android:id="@+id/string_main_intro_1"
                android:text="@string/string_main_intro_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:textSize="18sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/string_main_intro_2"
                android:text="@string/string_main_intro_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:textSize="18sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/string_main_intro_3"
                android:text="@string/string_main_intro_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:textSize="18sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/string_main_intro_4"
                android:text="@string/string_main_intro_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:textSize="18sp"
                android:textAlignment="center"/>

        </android.support.v4.view.ViewPager>


        <LinearLayout
            android:id="@+id/layout_create_and_view_plan_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/button_open_select_training_plan_activity"
                android:text="create"
                android:background="@color/buttonColor"
                android:textColor="@color/textPrimary"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/button_open_list_training_plans_activity"
                android:text="view plans"
                android:background="@color/buttonColor"
                android:textColor="@color/textPrimary"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:layout_margin="8dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
